--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -26,19 +26,21 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+/* header div changed to reflect nav change in HTML */
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
-header div ul {
+/* header div changed to reflect nav change in HTML */
+header nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+/* header div changed to reflect nav change in HTML */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
